--- a/src/components/pages/Contact/ContactForm.scss
+++ b/src/components/pages/Contact/ContactForm.scss
@@ -4,16 +4,17 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: 10vh 0vh;
 }
 
 .topContent {
+  background-color: var(--purple);
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  color: var(--text-color);
+  color: white;
+  margin-top: 8.9vh;
+  border-top: 1px solid #ffffff50;
   border-bottom-left-radius: 100%;
   border-bottom-right-radius: 100%;
 }
@@ -27,26 +28,25 @@
 
 #second {
   text-align: center;
-  font-size: 3em;
-  font-weight: 900;
+  margin-top: 3.5em;
+  margin-bottom: .75em;
 }
 
 #third {
   width: 40%;
   padding-bottom: 3rem;
-  font-weight: 500;
+  font-weight: 400;
   text-align: center;
 }
 
 .mainContainer form .contactInputs {
-  font-family: 'Poppins';
   background: none;
-  border: 2px solid var(--border-color);
-  padding: .75em;
-  font-weight: 500;
+  border: .5px solid #33333315;
+  padding: .65em .9em;
   border-radius: 1em;
   margin: 8px 0;
   width: 100%;
+  font-family: "Space Grotesk", sans-serif;
   font-size: 1.05em;
   width: 40%;
   transition: all ease-in-out 0.3s;
@@ -54,13 +54,12 @@
   &.six {
     height: 250px;
     resize: none;
-    font-family: 'Poppins';
   }
   
   &:hover {
-    background-color: var(--hover-color);
+    background-color: #f5f5f515;
+    border: 0.5px solid #5928e550;
   }
-
   @media screen and (max-width: 900px) {
     width: 80%;
   }
@@ -70,6 +69,7 @@
 }
 
 .mainContainer form {
+  background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -90,6 +90,15 @@
   }
 }
 
+#contactSubmit {
+  width: 150px;
+  margin-left: 26rem;
+  margin-bottom: 2rem;
+  @media screen and (max-width: 900px) {
+    margin: 0 auto;
+    margin: 5px 0 20px 0;
+  }
+}
 
 .errorContact {
   color: rgb(189, 51, 51);
@@ -98,12 +107,11 @@
   padding: 0.2em;
   width: 280px;
   text-align: left;
-
+  font-family: "Space Grotesk", sans-serif;
   @media screen and (max-width: 900px) {
     width: 80%;
     margin: 0 auto;
   }
-
   @media screen and (max-width: 1100px) {
     width: 80%;
     margin: 0 auto;
