--- a/src/components/pages/Dashboard/Community/Community.module.scss
+++ b/src/components/pages/Dashboard/Community/Community.module.scss
@@ -7,7 +7,7 @@
 
 .welcome_text {
     font-weight: 800;
-    color: var(--text-color);
+    color: var(--text-color)
 }
 
 .top_right {
@@ -22,14 +22,13 @@
 
 .quizess {
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
     overflow: scroll;
-    display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    gap: 1em;
 }
 
 .quiz {
-    width: 100%;
+    width: 23%;
     border: 2px solid var(--border-color);
     margin-bottom: 2%;
     border-radius: 0.85em;
@@ -38,10 +37,10 @@
     flex-direction: column;
     justify-content: space-between;
     background: var(--background-important);
-    position: relative;
 }
 
 .quiz_play {
+    font-family: "Integral CF Demi Bold";
     font-size: 1em;
     padding: 0.6em 1.5em;
     background: var(--button-bg);
@@ -50,10 +49,9 @@
     transition: all ease-in-out 0.3s;
     cursor: pointer;
     margin: 0.5em;
-    font-weight: 700;
 
     &:hover {
-        opacity: 0.7;
+        opacity: .7;
     }
 }
 
@@ -67,12 +65,12 @@
 .quiz_title {
     font-weight: 800;
     font-size: 1.3em;
-    padding: 0.65em 0.65em 0em 0.65em;
+    padding: 0.5em 0.5em 0em 0.5em;
     color: var(--text-color);
 }
 
 .quiz_description {
-    padding: 0.3em 0.75em 0.75em 0.75em;
+    padding: 0.25em 0.5em 0.5em 0.6em;
     color: var(--text-color);
 }
 
@@ -87,14 +85,12 @@
     margin-left: 0.5em;
     font-weight: bold;
     color: var(--text-color);
-    cursor: pointer;
 }
 
 .quizer_profile {
     width: 32px;
     border-radius: 100px;
     border: 2px solid var(--border-color);
-    cursor: pointer;
 }
 
 .user_wrapper {
@@ -146,39 +142,21 @@
 
 .search_input {
     font-size: 1.15em;
-    padding: 0.69em 1em;
-    border-radius: 5em 0em 0em 5em;
+    padding: 0.69em 0.8em;
+    border-radius: 0.75em 0em 0em 0.75em;
     background: var(--background-important);
     border: 2px solid var(--border-color);
     border-right: 0px transparent solid;
-    font-family: "Poppins";
-    color: var(--text-color);
-}
-
-
-.category_filter {
-    margin-left: .5em;
-    font-size: 1.15em;
-    padding: 0.69em 1em;
-    width: 125%;
-    border-radius: 5em 0em 0em 5em;
-    background: var(--background-important);
-    border: 2px solid var(--border-color);
-    border-right: 0px transparent solid;
-    font-family: "Poppins";
-    color: var(--text-color);
-}
-
-.category_select{
-    width: 125%;
+    font-family: "Space Grotesk", sans-serif;
+    color: var(--text-color)
 }
 
 .search_wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.69em 1em;
-    border-radius: 0em 5em 5em 0em;
+    padding: 0.69em 0.8em;
+    border-radius: 0em 0.75em 0.75em 0em;
     background: var(--background-important);
     border-top: 2px solid var(--border-color);
     border-right: 2px solid var(--border-color);
@@ -190,7 +168,7 @@
     fill: var(--icon-inside);
 }
 
-.page_info {
+.page_info{
     display: flex;
     align-items: center;
 }
