--- a/src/components/pages/Dashboard/Quiz/Quiz.module.scss
+++ b/src/components/pages/Dashboard/Quiz/Quiz.module.scss
@@ -16,13 +16,14 @@
     overflow-x: scroll;
 }
 
-.box_wrapper {
+.box_wrapper{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.boxes {
+
+.boxes{
     width: 48%;
     height: 20vh;
     border: 2px solid var(--border-color);
@@ -57,13 +58,14 @@
     }
 
     position: relative;
+
 }
 
-.delete {
+.delete{
     position: absolute;
-    top: 1em;
-    right: 1em;
+    top: 1em; right: 1em;
 }
+
 
 .single_slide_active {
     display: flex;
@@ -73,15 +75,13 @@
     height: 80%;
     padding: 1em;
     margin-right: 1em;
-    border: 2px solid var(--border-color);
+    border: 5px solid var(--border-color);
     border-radius: 0.75em;
     transition: all ease-in-out 0.3s;
     color: var(--text-color);
-    background: red;
 
     &:hover {
         background: rgba(141, 141, 141, 0.02);
-
     }
 
     position: relative;
@@ -104,6 +104,8 @@
     }
 }
 
+
+
 .header {
     width: 30%;
     height: 100vh;
@@ -114,7 +116,7 @@
     position: relative;
 }
 
-.header_container {
+.header_container{
     padding: 1em;
 }
 
@@ -155,7 +157,8 @@
     padding: 1em;
 }
 
-.empty_slide {
+
+.empty_slide{
     width: 65vw;
     height: 75vh;
     margin-right: 20vw;
@@ -166,47 +169,23 @@
     flex-direction: column;
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-    height: 1.5em;
-    fill: var(--text-color);
-}
-
-.notification_title{
-    font-size: 1.25em;
-    margin-left: .5em;
-    font-weight: 600;
-}
-
-.publish_cta {
-    width: 49%;
-    padding: 0.75em;
+.publish_cta{
+    width: 90%;
+    padding: .75em;
     font-size: 1.2em;
-    border-radius: 0.75em;
+    background: var(--background-less-important);
+    position: absolute;
+    bottom: 1em;
+    right: 1em;
+    border-radius: .75em;
+    border: none;
     display: flex;
     align-items: center;
-    border: 2px solid var(--border-color);
+    border: 2px solid var(--icon-border);
     color: var(--text-color);
     justify-content: center;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
-    background: transparent;
-    transition: .3s all ease-in-out;
-    cursor: pointer;
-
-    &:hover {
-        background: var(--background-less-important);
-    }
-}
-
-.publish_options {
-    width: 92%;
-    position: absolute;
-    bottom: 1em;
-    right: 1em;
-    display: flex;
-    justify-content: space-between;
 }
 
 .current_question {
@@ -242,7 +221,7 @@
 
     &::placeholder {
         color: var(--text-color);
-        opacity: 0.7;
+        opacity: .7;
     }
 }
 
@@ -255,7 +234,7 @@
     border-radius: 0.75em;
     border: 1px solid var(--border-active);
 
-    &:first-child {
+    &:first-child{
         margin-bottom: 1em;
     }
 }
@@ -279,7 +258,7 @@
     border: 2px solid var(--border-color);
     transition: 0.3s ease-in-out all;
 
-    &:first-child {
+    &:first-child{
         margin-bottom: 1em;
     }
 
@@ -305,7 +284,7 @@
 
     &::placeholder {
         color: var(--text-color);
-        opacity: 0.7;
+        opacity: .7;
     }
 
     &:active {
@@ -394,7 +373,7 @@
     font-size: 1.25em;
     padding: 0.35em 0em;
     border-bottom: 2px solid var(--border-color);
-    color: var(--text-color);
+    color: var(--text-color)
 }
 
 ._form_wrapper {
@@ -452,87 +431,22 @@
     border-radius: 0.85em;
     background: transparent;
     border: 2px solid var(--border-color);
-    transition: 0.3s ease-in-out all;
+    transition: .3s ease-in-out all;
     position: relative;
 
     &:hover {
-        background: rgba(141, 141, 141, 0.05);
+        background: rgba(141, 141, 141, .050);
         border: 2px solid var(--border-color);
     }
 
     user-select: none;
 
     margin: 1em 0em;
+
 }
 
-.copy_code_icon {
+.copy_code_icon{
     position: absolute;
     top: 30%;
-    right: 0.75em;
-}
-
-.goback{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding: 0em 1em;
-    align-items: center;
-    cursor: pointer;
-    position: relative;
-}
-.gobackbtn{
-    position: absolute;
-    left: 0;
-
-}
-
-.notification{
-    position: absolute;
-    top: 1em; right: 1em;
-    z-index: 12;
-    width: 320px; height: auto;
-    height: auto;
-    border: 2px solid var(--border-color);
-    border-radius: 1em;
-    background: var(--background-important);
-}
-
-.nothead{
-    padding: .35em 1em;
-    display: flex;
-    align-items: center;
-}
-
-.notspace{
-    width: 100%;
-    height: 2px;
-    background: var(--border-color)
-}
-
-.notbody{
-    padding: 1em;
-
-}
-
-.publishing{
-    width: 100%;
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.question_side{
-    width: 100%;
-    height: 20vh;
-    border: 2px solid var(--border-color);
-    border-radius: 25px;
-    
-    font-size: 1.1em;
-
-    margin-top: .75em;
-
-    &:last-child{
-        margin-top: 0em;
-    }
+    right: .75em;
 }
