--- a/src/components/pages/Error/Error.module.scss
+++ b/src/components/pages/Error/Error.module.scss
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,8 +10,8 @@
 .title {
     margin-top: 103em;
     font-size: 3em;
-    font-weight: 900;
-    color: var(--text-color);
+    font-family: "Integral CF Demi Bold";
+    color: var(--purple);
     margin-top: -1em;
 
     @media screen and (max-width: 900px) {
@@ -22,8 +22,7 @@
 .description {
     width: 35%;
     text-align: center;
-    font-size: 1.1em;
-    letter-spacing: -.1px;
+    font-size: 1.2em;
     margin: 0.6em 0em 1em 0em;
 
     @media screen and (max-width: 900px) {
@@ -32,20 +31,28 @@
 }
 
 .button {
-    font-weight: 800;
-    font-size: 1.1em;
-    padding: 1em 1.5em;
-    background: var(--button-bg);
-    color: var(--button-text);
-    letter-spacing: -.1px;
+    font-family: "Integral CF Demi Bold";
+    width: 20%;
+    font-size: 1.05em;
+    padding: 0.75em 1.25em;
+    background: #5928e5;
+    color: #fff;
     border-radius: 100px;
     border: 0;
     cursor: pointer;
     text-align: center;
     transition: all ease-in-out 0.5s;
 
-    &:hover{
-        opacity: .7;
+    @media screen and (max-width: 900px) {
+        width: 50%;
+        text-align: center;
+        font-size: 1em;
+        padding: 0.7em 1.05em;
     }
 
+    &:hover {
+        letter-spacing: 1px;
+    }
 }
+
+.illustration{}
