--- a/src/components/pages/Home/Features/Features.module.scss
+++ b/src/components/pages/Home/Features/Features.module.scss
@@ -4,8 +4,9 @@
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    padding: 0em 3em 1em 3em;
-    margin-bottom: 6.5%;
+    padding: 1em 3em;
+    margin-top: 3%;
+    margin-bottom: 7.5%;
 }
 
 .head{
@@ -16,12 +17,14 @@
 }
 
 .title{
-    font-weight: 900;
-    width: 60%;
+    font-family: "Integral CF Demi";
+    width: 55%;
     text-align: center;
-    color: var(--text-color);
+    color: #5928E5;
     font-size: 3em;
+    letter-spacing: 1px;
     margin-top: 2.5%;
+    margin-bottom: .1em;
 
     @media screen and (max-width: 900px) {
         font-size: 2.5em;
@@ -32,10 +35,12 @@
 }
 
 .description{
-    width: 60%;
-    font-size: 1.15em;
+    width: 50%;
+    font-size: 1.25em;
+    margin-top: .25em;
     text-align: center;
-    padding-bottom: 2em;
+    margin-bottom: 1.25em;
+
     @media screen and (max-width: 900px) {
         width: 100%;
         text-align: center;
@@ -66,16 +71,17 @@
 }
 
 .card_title{
+    font-family: "Integral CF Demi Bold";
     font-size: 1.65em;
-    color: var(--text-color);
+    color: #5928E5;
     margin-bottom: .2em;
 }
 
 .card_description{
-    width: 85%;
-    font-size: 1.1em;
+    font-size: 1.2em;
+    font-family: 'Space Grotesk', sans-serif;
     text-align: center;
-    color: var(--text-color);
+    color: #1e0d4e;
 }
 
 
