--- a/src/components/pages/Play/Code/Code.module.scss
+++ b/src/components/pages/Play/Code/Code.module.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100vh;
     padding: 1em 3em;
-    background: var(--background-less-important);
+    background: var(--purple);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,14 +35,19 @@
     font-size: 1.7em;
     padding: 0.4em 1em;
     border-radius: 99px;
-    color: var(--text-color);
+    color: var(--white);
     background: none;
     font-family: "Integral CF Extra";
-    border: 2px solid var(--border-color);
+    border: 0.7px solid #ffffff40;
     transition: all ease-in-out .3s;
 
+    &:hover{
+        border: 0.7px solid #ffffff;
+        color: #ffffff;
+    }
+
     &::placeholder{
-        color: var(--text-color);
+        color: #ffffff80;
     }
 }
 
@@ -51,7 +56,7 @@
     font-size: 5.5em;
     letter-spacing: 1px;
     line-height: 1.15em;
-    color: var(--text-color);
+    color: #fff;
     z-index: 2;
 
     @media screen and (max-width: 900px) {
@@ -77,8 +82,7 @@
     width: 80%;
     font-size: 1.2em;
     font-family: "Space Grotesk", sans-serif;
-    color: var(--text-color);
-
+    color: #fff;
     margin: 0.6em 0em 0.9em 0em;
 
     @media screen and (max-width: 900px) {
@@ -92,8 +96,7 @@
     width: 50%;
     font-size: .95em;
     font-family: "Space Grotesk", sans-serif;
-    color: var(--text-color);
-
+    color: rgb(202, 198, 198);
     margin: 0.6em 0em 0.9em 0em;
     margin-left: .25em;
 
@@ -114,8 +117,8 @@
     margin-left: 1em;
     font-size: 1.1em;
     padding: 1em 1.9em;
-    background: var(--button-bg);
-    color: var(--button-text);
+    background: #fff;
+    color: #5928e5;
     border-radius: 100px;
     border: 0;
     cursor: pointer;
@@ -130,4 +133,14 @@
     &:hover{
         letter-spacing: 2px;
     }
+}
+
+.logo {
+    display: flex;
+    position: absolute;
+    align-items: center;
+    height: 3em;
+    margin-right: 1.25em;
+    top: 4%;
+    fill: #fff;
 }
