--- a/src/components/shared/Buttons/Buttons.module.scss
+++ b/src/components/shared/Buttons/Buttons.module.scss
@@ -2,51 +2,79 @@
     font-family: "Integral CF Demi Bold";
     font-size: 0.9em;
     padding: 0.775em 1.5em;
-    background: var(--button-bg);
-    border: 0.5px solid var(--button-text);
-    color: var(--button-text);
+    background: #fff;
+    border: .5px solid #fff;
+    color: var(--background-less-important);
     border-radius: 100px;
-    transition: all ease-in-out 0.5s;
+    transition: all ease-in-out .5s;
     cursor: pointer;
+}
 
-    &:hover {
-        opacity: 0.9;
-    }
+.button_fill:hover {
+    background: var(--background-less-important);
+    color: #fff;
+    border: .5px solid #fff;
 }
 
 .button_faded {
     font-family: "Integral CF Demi Bold";
     font-size: 0.9em;
     padding: 0.775em 1.5em;
-    background: red;
-    border: 0.5px solid red; //check this
-    color: var(--button-text);
+    background: #ffffff25;
+    border: .5px solid #ffffff25;
+    color: #fff;
     border-radius: 100px;
-    transition: all ease-in-out 0.5s;
+    transition: all ease-in-out .5s;
     cursor: pointer;
     margin-right: 1em;
+}
 
-    &:hover {
-        background: var(--border-color); //check this
-        color: var(--white);
-        border: 0.5px solid var(--button-text);
+.button_faded:hover {
+    background: #ffffff50;
+    color: var(--white);
+    border: .5px solid #fff;
+}
+
+
+.cta_hero{
+    font-family: 'Integral CF Demi Bold';
+    width: 50%;
+    font-size: 1.1em;
+    padding: 1em 1.9em;
+    background: #fff;
+    color: var(--background-less-important);
+    border: .5px solid #fff;
+    border-radius: 100px;
+    cursor: pointer;
+    text-align: center;
+    transition: all ease-in-out .5s;
+
+    @media screen and (max-width: 900px) {
+        width: 100%;
+        text-align: center;
     }
+}
+
+.cta_hero:hover{
+    background: var(--background-less-important);
+    color: #fff;
+    border: .5px solid #fff;
 }
 
 .button_fill_purple {
     font-family: "Integral CF Demi Bold";
     font-size: 0.9em;
     padding: 0.775em 1.5em;
-    background: var(--button-bg);
-    color: var(--button-text);
-    border: 0.5px solid var(--button-bg);
+    background: var(--background-less-important);
+    color: #fff;
+    border: .5px solid var(--background-less-important);
     border-radius: 100px;
-    transition: all ease-in-out 0.5s;
+    transition: all ease-in-out .5s;
     cursor: pointer;
+}
 
-    &:hover {
-        background: var(--button-text);
-        color: var(--button-bg);
-        border: 0.5px solid var(--button-bg);
-    }
+.button_fill_purple:hover {
+    background: #fff;
+    color: var(--background-less-important);
+    border: .5px solid var(--background-less-important);
 }
