--- a/src/components/shared/Global/global.scss
+++ b/src/components/shared/Global/global.scss
@@ -4,7 +4,6 @@
   --white: #fff;
   --background-less-important: #fcfcfc;
   --background-important: #ffffff;
-  --background-auth: #111b25 !important;
   --border-color: #f3f3f3;
   --hover-color: #f3f3f3;
   --icon-inside: #a4adb7;
@@ -40,47 +39,37 @@
 }
 
 body {
-  color: var(--text-color) !important;
-  background: var(--background-important) !important;
+  color: var(--secondary);
+  background: var(--priamry);
   font-family: "Poppins", sans-serif !important;
   scroll-behavior: smooth;
-  display: flex;
-  flex-direction: column;
-}
-
-.body {
-  color: var(--text-color) !important;
-  background: var(--background-important) !important;
-  width: 100vw;
-}
-
-.body-dash {
-  width: 100vw !important;
-  height: 100vh !important;
-  overflow-y: scroll;
 }
 
 #view_active {
+  border-radius: 1.4em;
+  border: 0.5px solid #ffffff15;
   transition: all ease-in-out 0.3s;
-  border: 2px solid var(--border-color);
 
   &:hover {
-    background: var(--hover-color);
+    background: #ffffff10;
   }
 }
 
 #view_inactive {
-  transition: all ease-in-out 0.3s;
-  // border: 2px solid var(--border-color);
-  background: transparent;
+  background: #ffffff10;
+  border: 0.5px solid #ffffff15;
+}
 
-  &:hover {
-    background: var(--hover-color);
-  }
+#right {
+  background: red;
+}
+
+#left {
+  background-color: green;
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
+  width: .5em;
   height: 0px;
 }
 
@@ -97,7 +86,15 @@ body {
   background: #5928e570;
 }
 
-#nav-item {
+#globl {
+  width: 100%;
+  top: 0;
+  right: 0;
+  position: absolute;
+  z-index: 192349234239492394923432;
+}
+
+#nav-item{
   display: flex;
   align-items: center;
   padding: 0.75em;
@@ -108,23 +105,6 @@ body {
   cursor: pointer;
 
   &:hover {
-    background: var(--hover-color);
+      background: var(--hover-color);
   }
 }
-
-#nav-item-profile {
-  display: flex;
-  align-items: center;
-  padding: 0.75em;
-  border-radius: 0.75em;
-  margin-bottom: 0.5em;
-  transition: var(--animate);
-  position: relative;
-  cursor: pointer;
-
-  &:hover {
-    background: var(--hover-color);
-  }
-}
-
-#draggable { width: 150px; height: 150px; padding: 0.5em; }
