--- a/src/components/pages/Dashboard/Leaderboard/Leaderboard.module.scss
+++ b/src/components/pages/Dashboard/Leaderboard/Leaderboard.module.scss
@@ -294,11 +294,12 @@
 .hallusername{
     color: var(--text-color);
     margin-top: .375em;
+    font-weight: bold;
+    font-weight: 2em;
 }
 
 .hallcoins{
     color: var(--text-color);
-    margin-top: -.3em;
-    margin-bottom: .75em;
-
+    margin-top: -.1em;
+    margin-bottom: 1.75em;
 }
