Mini fixes + Stripe and Coin Buying handling

--- a/src/components/shared/Global/global.scss
+++ b/src/components/shared/Global/global.scss
@@ -128,3 +128,17 @@ body {
 }
 
 #draggable { width: 150px; height: 150px; padding: 0.5em; }
+
+
+#ok{
+  font-size: 1em !important
+}
+
+#show{
+  display: block !important;
+}
+
+#none{
+  display: none !important;
+
+}
