--- a/src/components/pages/Dashboard/Store/Store.module.scss
+++ b/src/components/pages/Dashboard/Store/Store.module.scss
@@ -60,6 +60,8 @@
 .quiz_image {
     width: 100%;
     height: 25vh;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
     border-radius: 0.85em 0.85em 0em 0em;
 }
@@ -155,9 +157,8 @@
     color: var(--text-color);
 }
 
-
 .category_filter {
-    margin-left: .5em;
+    margin-left: 0.5em;
     font-size: 1.15em;
     padding: 0.69em 1em;
     width: 125%;
@@ -169,7 +170,7 @@
     color: var(--text-color);
 }
 
-.category_select{
+.category_select {
     width: 125%;
 }
 
