--- a/src/components/shared/Dashbar/Dashbar.module.scss
+++ b/src/components/shared/Dashbar/Dashbar.module.scss
@@ -20,10 +20,16 @@
     border-right: 2px solid var(--border-color);
     padding: 0.75em;
     transition: all ease-in-out 0.3s;
+    @media (max-width: 767px) {
+        margin-top: 7rem;
+     //   width: 85%;
+       
+      }
 }
 
+/*
 .sidebar_top {
-}
+}*/
 
 .sidebar_top_small {
     display: flex;
@@ -31,11 +37,12 @@
     align-items: center;
 }
 
+/*
 .sidebar_bottom {
 }
 
 .sidebar_logo {
-}
+}*/
 
 .spacer {
     background: var(--border-color);
@@ -108,7 +115,7 @@
 .acc_actions_dropwdown {
     width: auto;
     position: absolute;
-    margin-top: 56%;
+    margin-top: 27%;
     right: 0;
     background: var(--background-important);
     border: 2px solid var(--border-color);
