--- a/src/components/pages/Dashboard/Store/Checkout.module.scss
+++ b/src/components/pages/Dashboard/Store/Checkout.module.scss
@@ -32,6 +32,9 @@
 .modal_body {
     padding: 1em 1em;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal_title {
@@ -94,4 +97,17 @@
     &:hover {
         background: #f1f1f130;
     }
+}
+
+.coinsWrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
