--- a/src/components/pages/Dashboard/Contact/Contact.module.scss
+++ b/src/components/pages/Dashboard/Contact/Contact.module.scss
@@ -31,14 +31,17 @@
     justify-content: center;
     align-items: center;
     height: 40vh;
-    background: var(--hover-color);
+    background: url('../../../../assets/images/well.jpeg');
     margin-bottom: 3em;
     border-radius: 0.75em;
+    background-position: center;
+    background-size: cover;
 }
 
 .contact_title {
     font-size: 2.5em;
     color: var(--text-color);
+    color: black
 }
 
 .contact_description {
@@ -83,8 +86,9 @@
 
 .all_tickets_wrapper {
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 1em;
 }
 
 .ticket_title {
@@ -223,4 +227,12 @@
     margin-left: 0.25em;
     padding-right: 0.85em;
     color: var(--button-text) !important;
+}
+
+
+.anwsers_container{
+    width: 100%;
+    padding: .5em;
+    background: var(--hover-color);
+    border-radius: 0.75em;
 }
