--- a/src/components/pages/Dashboard/Store/Checkout.module.scss
+++ b/src/components/pages/Dashboard/Store/Checkout.module.scss
@@ -20,6 +20,11 @@
     position: relative;
 }
 
+.quiz_image{
+    margin-top: -50%;
+    margin-left: 10%;
+}
+
 .modal_header {
     width: 100%;
     padding: 0.5em 1em;
