--- a/src/components/pages/Dashboard/Store/Store.module.scss
+++ b/src/components/pages/Dashboard/Store/Store.module.scss
@@ -42,8 +42,8 @@
 }
 
 .quiz_play {
-    font-size: 1em;
-    padding: 0.6em 1.5em;
+    font-size: 1.2em;
+    padding: 0.7em 1.5em;
     background: var(--button-bg);
     color: var(--button-text);
     border-radius: 100px;
@@ -51,6 +51,7 @@
     cursor: pointer;
     margin: 0.5em;
     font-weight: 700;
+    border: 0;
 
     &:hover {
         opacity: 0.7;
@@ -59,23 +60,29 @@
 
 .quiz_image {
     width: 100%;
-    height: 25vh;
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
+    height: 35vh;
+    max-width: 90%;
+    padding-left: 15%;
+    max-height: 90%;
+    object-fit: fill;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 0.85em 0.85em 0em 0em;
 }
 
 .quiz_title {
     font-weight: 800;
-    font-size: 1.3em;
+    font-size: 1.75em;
     padding: 0.65em 0.65em 0em 0.65em;
     color: var(--text-color);
+    text-align: center;
 }
 
 .quiz_description {
     padding: 0.3em 0.75em 0.75em 0.75em;
     color: var(--text-color);
+    text-align: center;
 }
 
 .quizer_holder {
