--- a/src/components/pages/Dashboard/Contact/Contact.module.scss
+++ b/src/components/pages/Dashboard/Contact/Contact.module.scss
@@ -12,8 +12,10 @@
 
 .bottom {
     width: 100%;
+    height: 70vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .quizess {
@@ -232,7 +234,47 @@
 
 .anwsers_container{
     width: 100%;
-    padding: .5em;
-    background: var(--hover-color);
+    padding: 1em;
+    height: 30vh;
     border-radius: 0.75em;
+    border: 2px var(--border-color) solid;
+    transition: all .3s ease-in-out;
+    cursor: pointer;
+
+    &:hover{
+        background: var(--hover-color);
+    }
+}
+
+
+
+.breakline{
+    width: 100%;
+    height: 2px;
+    background: var(--border-color);
+    margin-top: .2em;
+    margin-bottom: .5em;
+}
+
+.answers_topic{
+    font-size: 1.45em;
+    font-weight: 800;
+}
+
+.answer_topic{
+    font-size: 1.1em;
+    margin-top: .2em;
+    cursor: pointer;
+    // background: url('../../../../assets/images/coin.png') no-repeat left top;
+
+}
+
+.answers_topic{
+    list-style-type: none;
+}
+
+.imtitle{
+    font-size: 1.75em;
+    margin-bottom: .5em;
+    margin-left: .15em
 }
