--- a/src/components/pages/Dashboard/Profile/Profile.module.scss
+++ b/src/components/pages/Dashboard/Profile/Profile.module.scss
@@ -7,13 +7,15 @@
 
 .cover{
   width: 100%;
-  height: 35vh;
-  background: red;
-  border-radius: .75em;
-  position: relative;
-  background: var(--border-color);
-  background-position: center;
-  background-size: cover;
+    height: 35vh;
+    background: red;
+    border-radius: 0.75em;
+    position: relative;
+    object-fit: cover;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: 50% 50%;
+    background: var(--hover-color);
 }
 
 .avatar{
