--- a/src/components/shared/Global/global.scss
+++ b/src/components/shared/Global/global.scss
@@ -163,3 +163,7 @@ body {
   border-bottom: 5px solid var(--border-color);
   font-family: "Markprobold";
 }
+
+#brand{
+  fill: var(--border-color) !important;
+}
