--- a/src/components/pages/Form/Globals.module.scss
+++ b/src/components/pages/Form/Globals.module.scss
@@ -30,7 +30,7 @@
 
 .form {
   border: 2px solid var(--border-color);
-  background-color: #ffffff;
+  background-color: var(--background-important);
   display: flex;
   align-items: center;
   justify-content: center;
