--- a/src/components/pages/Form/Form.scss
+++ b/src/components/pages/Form/Form.scss
@@ -37,7 +37,7 @@
   width: 200%;
   transform: translateX(0);
   transition: transform 0.6s ease-in-out;
-  background-color: #5928E5 !important;
+  background-color: var(--button-bg) !important;
 }
 
 .overlay_panel {
