--- a/src/components/pages/Form/shared/LoginRegister.scss
+++ b/src/components/pages/Form/shared/LoginRegister.scss
@@ -3,10 +3,9 @@
   top: 0;
   height: 100%;
   transition: all 0.6s ease-in-out;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: "Poppins", sans-serif;
 
   &form {
-    background-color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,7 +13,7 @@
     padding: 0 50px;
     height: 100%;
     text-align: center;
-    font-family: "Space Grotesk", sans-serif;
+    font-family: "Poppins", sans-serif;
   }
 }
 
@@ -45,7 +44,7 @@
   padding: 0.65em 0.75em;
   border-radius: 1em;
   border: 0;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: "Poppins", sans-serif;
   margin-right: 0.25em;
   margin-bottom: 0.65em;
   border: 0.5px solid #33333315;
@@ -69,7 +68,7 @@
   padding: 0.65em 0.75em;
   border-radius: 1em;
   border: 0;
-  font-family: "Space Grotesk", sans-serif;
+  font-family: "Poppins", sans-serif;
   margin-right: 0.25em;
   margin-bottom: 0.65em;
   border: 0.5px solid #33333315;
